examples/fail/assign_type_mismatch.hax
module ZZZ::AssignTypeMismatch;

sub main() -> Int {
  var Int ^x := 1;
  ^x := true;
  return ^x;
}
